# InformationTechnology

./: .gitmodules  README.md
project/database/: CMakeLists.txt  Dockerfile
project/database/core/: CMakeLists.txt
project/database/core/include/: AbstractCommand.h  AbstractSaveLoadStrategy.h  AbstractTableFactory.h  ColumnUtils.h  Commands.h  CustomSaveLoadStrategy.h  CustomTable.h  Database.h  DatabaseClient.h  MongoDbSaveLoadStrategy.h  SQLiteSaveLoadStrategy.h  SaveLoadUtils.h  StringUtils.h  VirtualDatabase.h  VirtualTable.h  VirtualValidators.h
project/database/core/src/: ColumnUtils.cpp  Commands.cpp  CustomSaveLoadStrategy.cpp  CustomTable.cpp  Database.cpp  DatabaseClient.cpp  MongoDbSaveLoadStrategy.cpp  SQLiteSaveLoadStrategy.cpp  StringUtils.cpp
project/database/custom_test_db_projects/: my.cdb
project/database/desktop_client/: CMakeLists.txt  DesktopDatabaseClient.cpp  DesktopDatabaseClient.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
project/database/desktop_client/Delegates/: DbTableDelegate.cpp  DbTableDelegate.h
project/database/desktop_client/Dialogs/: ColumnInfoDialog.cpp  ColumnInfoDialog.h  ColumnInfoDialog.ui  ConnectTogRpcServerDialog.cpp  ConnectTogRpcServerDialog.h  ConnectTogRpcServerDialog.ui  CreateCartesianProductDialog.cpp  CreateCartesianProductDialog.h  CreateCartesianProductDialog.ui  LoadFromMongoDbDialog.cpp  LoadFromMongoDbDialog.h  LoadFromMongoDbDialog.ui  NewDbDialog.cpp  NewDbDialog.h  NewDbDialog.ui  NewTableDialog.cpp  NewTableDialog.h  NewTableDialog.ui  SaveDatabaseDialog.cpp  SaveDatabaseDialog.h  SaveDatabaseDialog.ui  TableNameDialog.cpp  TableNameDialog.h  TableNameDialog.ui
project/database/desktop_client/Models/: DbTableModel.cpp  DbTableModel.h  ResetableModel.h  TableListModel.cpp  TableListModel.h
project/database/desktop_client/gRpcClient/: gRpcDatabase.cpp  gRpcDatabase.h  gRpcTable.cpp  gRpcTable.h
project/database/desktop_client/gRpcClient/gRpcClientsImpl/: gRpcColumnsClient.cpp  gRpcColumnsClient.h  gRpcCreateCartesianProductClient.cpp  gRpcCreateCartesianProductClient.h  gRpcCreateTableClient.cpp  gRpcCreateTableClient.h  gRpcDeleteTableClient.cpp  gRpcDeleteTableClient.h  gRpcGetAllRowsClient.cpp  gRpcGetAllRowsClient.h  gRpcGetAllTablesIdClient.cpp  gRpcGetAllTablesIdClient.h  gRpcGetColumnsCountClient.cpp  gRpcGetColumnsCountClient.h  gRpcGetDatabaseNameClient.cpp  gRpcGetDatabaseNameClient.h  gRpcGetRowsCountClient.cpp  gRpcGetRowsCountClient.h  gRpcGetTableCountClient.cpp  gRpcGetTableCountClient.h  gRpcGetTableNameClient.cpp  gRpcGetTableNameClient.h  gRpcRenameTableClient.cpp  gRpcRenameTableClient.h  gRpcRowsClient.cpp  gRpcRowsClient.h
project/database/gRpcPythonClient/: .gitignore  README.md  graphql_server.py  grpc_proto_build.sh  schema.graphql
project/database/gRpcPythonClient/grpc_generated/: target.py
project/database/gRpcPythonClient/resolvers/: column_mutation_resolver.py  create_cartesian_product_resolver.py  get_table_info_resolver.py  get_table_list_resolver.py  get_table_resolver.py  row_mutation_resolver.py  table_mutation_resolver.py
project/database/gRpcServer/: CMakeLists.txt  ServicesHolder.cpp  ServicesHolder.h  main.cpp
project/database/gRpcServer/Services/: CreateCartesianProductService.cpp  CreateTableService.cpp  GetAllRowsService.h  GetAllTablesIdService.h  GetDatabaseNameService.cpp  GetRowsCountService.cpp  GetRowsCountService.h  GetTableCountService.cpp  GetTableCountService.h  GetTableNameService.cpp  GetTableNameService.h  RowsService.cpp  RowsService.h
project/database/gRpsServer/: CMakeLists.txt  ServicesHolder.cpp  ServicesHolder.h  main.cpp
project/database/gRpsServer/Services/: ColumnsService.cpp  ColumnsService.h  CreateCartesianProductService.h  CreateTableService.h  DatabaseCreatorService.cpp  DatabaseCreatorService.h  DeleteTableService.cpp  DeleteTableService.h  GetAllRowsService.cpp  GetAllTablesIdService.cpp  GetColumnsCountService.cpp  GetColumnsCountService.h  GetDatabaseNameService.cpp  GetDatabaseNameService.h  GetTableCountService.cpp  GetTableCountService.h  RenameTableService.cpp  RenameTableService.h  RowsService.cpp
project/database/proto/: all_tables_id.proto  column_id.proto  columns_service.proto  create_cartesian_product_service.proto  create_new_database.proto  create_table_service.proto  database_getname_service.proto  database_name.proto  delete_table_service.proto  get_all_rows_service.proto  get_all_tables_service.proto  get_columns_count_service.proto  get_rows_count_service.proto  get_table_name_service.proto  get_tables_count_service.proto  rename_table_service.proto  row_id.proto  rows_service.proto  table_count_service.proto  table_id.proto  table_name.proto
project/database/unit_test/: CMakeLists.txt  main.cpp
report/: report.tex
